--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Reduxstagram</title>
-    <link rel="shortcut icon" type="image/png" href="http://wes.io/ehRe/my-favourite-icon.png"/>
-
-  </head>
+  <link href="/static/style.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-    <script src="/static/bundle.js"></script>
-  </body>
+  <script type="text/javascript" src="/static/bundle.js"></script></body>
 </html>
