--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
   <link href="/static/style.css" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
   <body>
     <div id="root"></div>
   <script type="text/javascript" src="/static/bundle.js"></script></body>
